--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"><i class="fa fa-code-fork"></i> Fork This</a>
+        <a class="navbar-brand js-scroll-trigger" href="https://github.com/LaurynasK/laurynask.github.io"><i class="fa fa-code-fork"></i> Fork This</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
