--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger active" href="https://drive.google.com/file/d/1gusAQHotpSJSMV4occjjYF985owg1G27/view?usp=sharing"><i class="fa fa-file"></i> MY RESUME</a>
+              <a class="nav-link js-scroll-trigger active" href="https://drive.google.com/file/d/1gusAQHotpSJSMV4occjjYF985owg1G27/view?usp=sharing"><i class="fa fa-file"></i> MY RESUME (LT)</a>
             </li>
           </ul>
         </div>
